made jump then slide when sliding, stopped image stretching

--- a/style-featured.css
+++ b/style-featured.css
@@ -1,6 +1,8 @@
-.slick-item img{
+.featured-image {
 	height: 100vh;
 	width: 100%;
+	background-color: gray;
+	overflow: hidden; 
 }
 .textcontainer {
 	background-color: transparent;
